--- a/Dockerfiles/recon/Dockerfile
+++ b/Dockerfiles/recon/Dockerfile
@@ -8,7 +8,7 @@ COPY skid.sh /hunter
 
 RUN chmod +x /hunter/skid.sh
 
-RUN go install -v github.com/projectdiscovery/pdtm/cmd/pdtm@latest && go install -v github.com/OJ/gobuster/v3@latest && go install github.com/lc/gau/v2/cmd/gau@latest && go install github.com/hahwul/dalfox/v2@latest && go install github.com/ffuf/ffuf/v2@latest && go install -v github.com/tomnomnom/anew@latest
+RUN go install -v github.com/projectdiscovery/pdtm/cmd/pdtm@latest && go install -v github.com/OJ/gobuster/v3@latest && go install github.com/lc/gau/v2/cmd/gau@latest && go install github.com/ffuf/ffuf/v2@latest && go install -v github.com/tomnomnom/anew@latest
 
 RUN pdtm -i subfinder,dnsx,httpx,nuclei,katana,chaos-client
 
