--- a/Dockerfiles/recon/Dockerfile
+++ b/Dockerfiles/recon/Dockerfile
@@ -4,9 +4,9 @@ RUN apt update -y && apt install -y nmap vim python3 python3-pip unzip curl scre
 
 WORKDIR /recon
 
-COPY ../../recon.sh /recon
+COPY recon.sh /recon
 
-RUN chmod +x /recon/skid.sh
+RUN chmod +x /recon/recon.sh
 
 RUN go install -v github.com/projectdiscovery/pdtm/cmd/pdtm@latest && go install -v github.com/OJ/gobuster/v3@latest && go install github.com/lc/gau/v2/cmd/gau@latest && go install github.com/ffuf/ffuf/v2@latest && go install -v github.com/tomnomnom/anew@latest
 
@@ -26,4 +26,4 @@ RUN pip install waymore dirsearch arjun uro --break-system-packages
 
 ENV PATH="/root/.local/bin:/root/.pdtm/go/bin:/root/go/bin:/usr/local/bin:${PATH}"
 
-
+CMD [ "./recon.sh" ]
